<resources>
    <string name="app_name">Assingment2</string>
    <string name="divide">\uf529</string>
    <string name="clear">\uf12d</string>
    <string name="plus">\u002b</string>
    <string name="plus_minus">\ue43c</string>
    <string name="minus">\uf068</string>
    <string name="multiply">\uf00d</string>
    <string name="backspace">\uf55a</string>
    <string name="percent">\u0025</string>
    <string name="equals">\u003d</string>
    <string name="results">0</string>
    <string name="zeroButton">0</string>
    <string name="oneButton">1</string>
    <string name="twoButton">2</string>
    <string name="threeButton">3</string>
    <string name="fourButton">4</string>
    <string name="fiveButton">5</string>
    <string name="sixButton">6</string>
    <string name="nineButton">9</string>
    <string name="eightButton">8</string>
    <string name="sevenButton">7</string>
    <string name="decimalButton">.</string>

</resources>