<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paleWhite"
    tools:context=".MainActivity">



        <LinearLayout
            android:id="@+id/resultRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3">


            <TextView
                android:id="@+id/resultView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_size"
                android:layout_marginStart="@dimen/xMargin"
                android:layout_marginEnd="@dimen/xMargin"
                android:fontFamily="@font/fasolid900"
                android:gravity="end"
                android:paddingTop="@dimen/yPixels"
                android:paddingEnd="@dimen/yPixels"
                android:text="@string/results"
                android:textSize="@dimen/result_text_size"
                android:maxLines="1"
                android:maxLength="9"/>
        </LinearLayout>




   <LinearLayout
       android:id="@+id/fifthRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/fourthRow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/resultRow">


       <Button
       android:id="@+id/clearButton"
       android:layout_width="@dimen/button_size"
       android:layout_height="@dimen/button_size"
       android:layout_marginStart="@dimen/xMargin"
       android:layout_marginEnd="@dimen/xMargin"
       android:layout_weight="1"
       android:backgroundTint="@color/red"
       android:fontFamily="@font/fasolid900"
       android:paddingStart="@dimen/xPixels"
       android:paddingEnd="@dimen/xPixels"
       android:tag="Clear"
       android:text="@string/clear"
       android:textColor="@color/black"
       android:textSize="@dimen/button_text" />

       <Button
           android:id="@+id/decimalButton"
           android:layout_width="@dimen/button_size"
           android:layout_height="@dimen/button_size"
           android:layout_marginStart="@dimen/xMargin"
           android:layout_marginEnd="@dimen/xMargin"
           android:layout_weight="1"
           android:backgroundTint="@color/red"
           android:fontFamily="@font/fasolid900"
           android:paddingStart="@dimen/xPixels"
           android:paddingEnd="@dimen/xPixels"
           android:tag="."
           android:text="@string/decimalButton"
           android:textColor="@color/black"
           android:textSize="@dimen/button_text" />

       <Button
           android:id="@+id/plusMinusButton"
           android:layout_width="@dimen/button_size"
           android:layout_height="@dimen/button_size"
           android:layout_marginStart="@dimen/xMargin"
           android:layout_marginEnd="@dimen/xMargin"
           android:layout_weight="1"
           android:backgroundTint="@color/red"
           android:fontFamily="@font/fasolid900"
           android:paddingStart="@dimen/xPixels"
           android:paddingEnd="@dimen/xPixels"
           android:tag="-"
           android:text="@string/plus_minus"
           android:textColor="@color/black"
           android:textSize="@dimen/button_text" />

       <Button
           android:id="@+id/divideButton"
           android:layout_width="@dimen/button_size"
           android:layout_height="@dimen/button_size"
           android:layout_marginStart="@dimen/xMargin"
           android:layout_marginEnd="@dimen/xMargin"
           android:layout_weight="1"
           android:backgroundTint="@color/red"
           android:fontFamily="@font/fasolid900"
           android:paddingStart="@dimen/xPixels"
           android:paddingEnd="@dimen/xPixels"
           android:tag="/"
           android:text="@string/divide"
           android:textColor="@color/black"
           android:textSize="@dimen/button_text" />

   </LinearLayout>



    <LinearLayout
            android:id="@+id/fourthRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/thirdRow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fifthRow">


        <Button
            android:id="@+id/sevenButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/xMargin"
            android:layout_marginEnd="@dimen/xMargin"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/fasolid900"
            android:paddingStart="@dimen/xPixels"
            android:paddingEnd="@dimen/xPixels"
            android:tag="7"
            android:text="@string/sevenButton"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/eightButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/xMargin"
            android:layout_marginEnd="@dimen/xMargin"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/fasolid900"
            android:paddingStart="@dimen/xPixels"
            android:paddingEnd="@dimen/xPixels"
            android:tag="8"
            android:text="@string/eightButton"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/nineButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/xMargin"
            android:layout_marginEnd="@dimen/xMargin"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/fasolid900"
            android:paddingStart="@dimen/xPixels"
            android:paddingEnd="@dimen/xPixels"
            android:tag="9"
            android:text="@string/nineButton"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/xMargin"
            android:layout_marginEnd="@dimen/xMargin"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/fasolid900"
            android:paddingStart="@dimen/xPixels"
            android:paddingEnd="@dimen/xPixels"
            android:tag="*"
            android:text="@string/multiply"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />



    </LinearLayout>


    <LinearLayout
        android:id="@+id/thirdRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/secondRow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fourthRow">


        <Button
            android:id="@+id/fourButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/xMargin"
            android:layout_marginEnd="@dimen/xMargin"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/fasolid900"
            android:paddingStart="@dimen/xPixels"
            android:paddingEnd="@dimen/xPixels"
            android:tag="4"
            android:text="@string/fourButton"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />


        <Button
            android:id="@+id/fiveButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/xMargin"
            android:layout_marginEnd="@dimen/xMargin"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/fasolid900"
            android:paddingStart="@dimen/xPixels"
            android:paddingEnd="@dimen/xPixels"
            android:tag="5"
            android:text="@string/fiveButton"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/sixButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/xMargin"
            android:layout_marginEnd="@dimen/xMargin"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/fasolid900"
            android:paddingStart="@dimen/xPixels"
            android:paddingEnd="@dimen/xPixels"
            android:tag="6"
            android:text="@string/sixButton"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/minusButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/xMargin"
            android:layout_marginEnd="@dimen/xMargin"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/fasolid900"
            android:paddingStart="@dimen/xPixels"
            android:paddingEnd="@dimen/xPixels"
            android:tag="-"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />



    </LinearLayout>



    <LinearLayout
        android:id="@+id/secondRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/firstRow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thirdRow">

        <Button
            android:id="@+id/oneButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/xMargin"
            android:layout_marginEnd="@dimen/xMargin"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/fasolid900"
            android:paddingStart="@dimen/xPixels"
            android:paddingEnd="@dimen/xPixels"
            android:tag="1"
            android:text="@string/oneButton"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />


        <Button
            android:id="@+id/twoButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/xMargin"
            android:layout_marginEnd="@dimen/xMargin"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/fasolid900"
            android:paddingStart="@dimen/xPixels"
            android:paddingEnd="@dimen/xPixels"
            android:tag="2"
            android:text="@string/twoButton"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/threeButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/xMargin"
            android:layout_marginEnd="@dimen/xMargin"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/fasolid900"
            android:paddingStart="@dimen/xPixels"
            android:paddingEnd="@dimen/xPixels"
            android:tag="3"
            android:text="@string/threeButton"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/plusButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/xMargin"
            android:layout_marginEnd="@dimen/xMargin"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/fasolid900"
            android:paddingStart="@dimen/xPixels"
            android:paddingEnd="@dimen/xPixels"
            android:tag="+"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

    </LinearLayout>




    <LinearLayout
        android:id="@+id/firstRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondRow">




        <Button
            android:id="@+id/zeroButton"
            android:layout_width="155dp"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/xMargin"
            android:layout_marginEnd="@dimen/xMargin"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/fasolid900"
            android:paddingStart="@dimen/xPixels"
            android:paddingEnd="@dimen/xPixels"
            android:tag="0"
            android:text="@string/zeroButton"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/backspaceButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/xMargin"
            android:layout_marginEnd="@dimen/xMargin"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/fasolid900"
            android:paddingStart="@dimen/xPixels"
            android:paddingEnd="@dimen/xPixels"
            android:tag="Delete"
            android:text="@string/backspace"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/equalsButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/xMargin"
            android:layout_marginEnd="@dimen/xMargin"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/fasolid900"
            android:paddingStart="@dimen/xPixels"
            android:paddingEnd="@dimen/xPixels"
            android:tag="="
            android:text="@string/equals"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>